Added header and links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="jumbotron">
+	<div class="text-center">
+		<h1>Welcome to GrowthGuides</h1>
+		<p>A marketplace for buying and selling Growth Hacking guides</p>
+		<%= link_to "Guides", "#", class: "btn btn-primary btn-lg" %>
+		<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+	</div>
+</div>
