--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,16 @@
-<h2>Resend confirmation instructions</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+
+<h2 class="text-center">Resend confirmation instructions</h2>
+
   <%= f.error_notification %>
   <%= f.full_error :confirmation_token %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-  </div>
+    <%= f.input :email, required: true, autofocus: true, label: false, placeholder: "Your email address", input_html: { class: "form-control" } %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Resend confirmation instructions" %>
-  </div>
+    <%= f.button :submit, "Resend confirmation instructions", class: "btn btn-primary btn-block" %>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="text-center">
+	<%= render "devise/shared/links" %>
+</div>
