--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,19 +1,20 @@
-<h2>Change your password</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+
+<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: "form-signin" }) do |f| %>
+
+<h2 class="text-center">Change your password</h2>
   <%= f.error_notification %>
 
   <%= f.input :reset_password_token, as: :hidden %>
   <%= f.full_error :reset_password_token %>
 
-  <div class="form-inputs">
-    <%= f.input :password, label: "New password", required: true, autofocus: true %>
-    <%= f.input :password_confirmation, label: "Confirm your new password", required: true %>
-  </div>
+    <%= f.input :password, label: false, required: true, autofocus: true, placeholder: "Password", input_html: { class: "form-control" } %>
+    <%= f.input :password_confirmation, label: false, required: true, placeholder: "Password Confirmation", input_html: { class: "form-control" } %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
-  </div>
+    <%= f.button :submit, "Change my password", class: "btn btn-primary btn-block" %>
+
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="text-center">
+  <%= render "devise/shared/links" %>
+</div>
