--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,17 @@
-<h2>Resend unlock instructions</h2>
+
 
 <%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+
+<h2 class="text-center">Resend unlock instructions</h2>
   <%= f.error_notification %>
   <%= f.full_error :unlock_token %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-  </div>
+    <%= f.input :email, required: true, autofocus: true,label: false, placeholder: "Email", input_html: { class: "form-control" } %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Resend unlock instructions" %>
-  </div>
+    <%= f.button :submit, "Resend unlock instructions", class: "btn btn-primary btn-block" %>
+  
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="text-center">
+	<%= render "devise/shared/links" %>
+</div>
