--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
               <li><%= link_to "Settings", edit_user_registration_path %></li>
               <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
             <% else %>
-              <li><%= link_to "Login", new_user_session_path %></li>
+              <li><%= link_to "Sign In", new_user_session_path %></li>
             <% end %>
             
             
