--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
           
           
           <ul class="nav navbar-nav navbar-right">
-              <li><%= link_to "Guides", "#" %></li>
+              <li><%= link_to "Guides", guides_path %></li>
             <% if current_user %> 
               <li><%= link_to "Settings", edit_user_registration_path %></li>
               <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
