--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
 	<div class="text-center">
 		<h1>Welcome to GrowthGuides</h1>
 		<p>A marketplace for buying and selling Growth Hacking guides</p>
-		<%= link_to "Guides", "#", class: "btn btn-primary btn-lg" %>
+		<%= link_to "Guides", guides_path, class: "btn btn-primary btn-lg" %>
 		<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
 	</div>
 </div>
