--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "GrowthGuides", root_path, class: "navbar-brand" %>
+          </i><%= link_to " GrowthGuides", root_path, class: "navbar-brand mute" %>
         </div>
  
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -16,6 +16,7 @@
           
           
           <ul class="nav navbar-nav navbar-right">
+              <li><%= link_to "Blog", blog_index_path %></li>
               <li><%= link_to "Guides", guides_path %></li>
             <% if current_user %> 
               <li><%= link_to "Settings", edit_user_registration_path %></li>
