--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,14 +6,87 @@
 
 <% else %>
 
-<div class="jumbotron">
-	<div class="text-center">
-		<h1>Welcome to GrowthGuides</h1>
-		<p>A marketplace for buying and selling Growth Hacking guides</p>
-		<%= link_to "Guides", guides_path, class: "btn btn-primary btn-lg" %>
-		<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
-	</div>
+<body id="home-body">
+
+    <div class="container-full">
+
+          <div class="row">
+           
+            <div class="col-lg-12 text-center v-center">
+              
+              <div class="text-center">
+    		<h1 id="main-header">Learn Growth Hacking</h1>
+    		<p class="lead">GrowthGuides is a marketplace for buying and selling Growth Hacking knowledge</p>
+    		<%= link_to "Guides", guides_path, class: "btn btn-primary btn-lg" %> 
+    		<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+    	</div>
+
+    		<br><br>
+
+              <p>Sign up for the Weekly Growth Hacks Round-Up</p>
+              
+              <form class="col-lg-12">
+                <div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
+                  <input type="text" class="center-block form-control input-lg" title="Enter you email." placeholder="Enter your email address">
+                  <span class="input-group-btn"><button class="btn btn-lg btn-primary" type="button">OK</button></span>
+                </div>
+              </form>
+            </div>
+            
+          </div> <!-- /row -->
+      
+      	  <div class="row">
+           
+            <div class="col-lg-12 text-center v-center" style="font-size:39pt;">
+              <a href="#"><i class="icon-google-plus"></i></a> <a href="#"><i class="icon-facebook"></i></a>  <a href="#"><i class="icon-twitter"></i></a> <a href="#"><i class="icon-github"></i></a> <a href="#"><i class="icon-pinterest"></i></a>
+            </div>
+          
+          </div>
+      
+      	<br><br><br><br><br>
+
+    </div> <!-- /container full -->
+
+    <div class="container">
+      
+      	<hr>
+      
+      	<div class="row">
+            <div class="col-md-4">
+              <div class="panel panel-default">
+                <div class="panel-heading"><h3>Benefit One</h3></div>
+                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. 
+                Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis 
+                dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan. 
+                Aliquam in felis sit amet augue.
+                </div>
+              </div>
+            </div>
+          	<div class="col-md-4">
+            	<div class="panel panel-default">
+                <div class="panel-heading"><h3>Benefit Two</h3></div>
+                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. 
+                Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis 
+                dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan. 
+                Aliquam in felis sit amet augue.
+                </div>
+              </div>
+            </div>
+          	<div class="col-md-4">
+            	<div class="panel panel-default">
+                <div class="panel-heading"><h3>Benefit Three</h3></div>
+                <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. 
+                Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis 
+                dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan. 
+                Aliquam in felis sit amet augue.
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <% end %>
+
+
 
