--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,6 +2,6 @@
 			<br><br><br>
 	<div class="container">
 
-        <p class="text-muted pull-right">&nbsp; © Copyright 2015 <%= link_to "GrowthGuides.com", root_path %></p>
+        <p class="text-muted pull-right white-text">&nbsp; © Copyright 2015 <%= link_to "GrowthGuides.com", root_path, class: "white-text" %></p>
     </div>
 </footer>
