--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,68 @@
  *= require_self
  *= require font-awesome
  */
+
+
+.nav-tabs {
+  display: inline-block;
+  border-bottom: none;
+  padding-top: 15px;
+  font-weight: bold;
+}
+.nav-tabs > li > a, 
+.nav-tabs > li > a:hover, 
+.nav-tabs > li > a:focus, 
+.nav-tabs > li.active > a, 
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus {
+  border: none;
+  border-radius: 0;
+}
+
+.nav-list { border-bottom: 1px solid #eee; }
+.nav-list > li { 
+  padding: 20px 15px 15px;
+  border-left: 1px solid #eee; 
+}
+.nav-list > li:last-child { border-right: 1px solid #eee; }
+.nav-list > li > a:hover { text-decoration: none; }
+.nav-list > li > a > span {
+  display: block;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.mega-dropdown { position: static !important; }
+.mega-dropdown-menu {
+  padding: 20px 15px 15px;
+  text-align: center;
+  width: 100%;
+}
+
+#brand {
+  font-family: 'Antic Slab', serif;
+  color: #8e44ad;
+  font-weight: 600;
+}
+
+a#brand:hover {
+  color: #9b59b6;
+  font-weight: 800;
+  border-bottom: 1px solid #8e44ad;
+  padding-bottom: 3px;
+}
+
+#header-nav-right a {
+  color: #8e44ad;
+}
+
+#header-nav-right a:hover {
+  color: #9b59b6;
+  font-weight: 600;
+  border-bottom: 1px solid #8e44ad;
+  padding-bottom: 15px;
+}
+
+#footer-link {
+  #fff
+}
