--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -5,3 +5,18 @@
   To use Glyphicons sprites instead of Font Awesome, replace with "require twitter-bootstrap-static/sprites"
   =require twitter-bootstrap-static/fontawesome
   */
+
+ .btn-primary {
+ 	background-color: #8e44ad;
+ 	border-color: #8e44ad;
+ }
+
+ .btn-primary:hover {
+ 	background-color: #9b59b6;
+ 	border-color: #9b59b6;
+ }
+
+ .btn-primary:active {
+ 	background-color: #9b59b6;
+ 	border-color: #9b59b6;
+ }
