--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,25 +28,15 @@
                                 <li><a href="#"><%= image_tag 'retention.png' %><span>Retention</span></a></li>
                                 <li><a href="#"><%= image_tag 'referral.png' %><span>Referral</span></a></li>
                                 <li><a href="#"><%= image_tag 'revenue.png' %><span>Revenue</span></a></li>
-                            
                             </ul>
                           </div>
                           <div class="tab-pane" id="women">
                             <ul class="nav-list list-inline">
-                                <li><a href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_Running.png"><span>Running</span></a></li>
-                                <li><a href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_Basketball.png"><span>Basketball</span></a></li>
-                                <li><a href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_Football.png"><span>Football</span></a></li>
-                                <li><a href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_Soccer.png"><span>Soccer</span></a></li>                                
-                            </ul>
-                          </div>
-                          <div class="tab-pane" id="kids">
-                            <ul class="nav-list list-inline">
-                                <li><a href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_Running.png"><span>Running</span></a></li>
-                                <li><a href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_Basketball.png"><span>Basketball</span></a></li>
-                                <li><a href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_Football.png"><span>Football</span></a></li>
-                                <li><a href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_Soccer.png"><span>Soccer</span></a></li>
-                                <li><a href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_MensTraining.png"><span>Men's Training</span></a></li>
-                                <li><a href="#"><img src="http://content.nike.com/content/dam/one-nike/globalAssets/menu_header_images/OneNike_Global_Nav_Icons_WomensTraining.png"><span>Women's Training</span></a></li>
+                                <li><a href="#"><%= image_tag 'acquisition.png' %><span>Acquisition</span></a></li>
+                                <li><a href="#"><%= image_tag 'activation.png' %><span>Activation</span></a></li>
+                                <li><a href="#"><%= image_tag 'retention.png' %><span>Retention</span></a></li>
+                                <li><a href="#"><%= image_tag 'referral.png' %><span>Referral</span></a></li>
+                                <li><a href="#"><%= image_tag 'revenue.png' %><span>Revenue</span></a></li>
                             </ul>
                           </div>
                     
