--- a/app/assets/stylesheets/guides.css.scss
+++ b/app/assets/stylesheets/guides.css.scss
@@ -4,6 +4,52 @@
 
 @import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css);
 
+a {
+color: #ecf0f1;
+text-decoration: none;
+}
+
+div.box-icon > span {
+	background-color: #ecf1f1;  
+}
+
+#browse-header {
+	color: #ecf1f1;
+}
+
+.menu_spacer {
+	margin-top: 6px;
+	margin-left: 4px;
+}
+
+.menu_cat {
+	margin-top: 25px;
+	font-size: 23px;
+	color: #c8c8c8;
+	font-weight: 600;
+}
+
+.links {
+	margin-top: 8px;
+}
+
+.menu_link, .menu_link2, .menu_link3 {
+font-size: 18px;
+color: #E6E6E6;
+font-weight: 600;
+line-height: 22px;
+text-decoration: none;
+cursor: pointer;
+}
+
+.menu_link:hover, .active, .menu_link2:hover, .menu_link3:hover {
+color: #f1c40f;
+}
+
+.menu_link:hover {
+	text-decoration: none;
+}
+
 #guide-price {
 	margin-top: 15px;
 }
@@ -32,6 +78,7 @@
 @import url(//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
 
 div.box {
+	background-color: #ecf1f1;
 	width: 100%;
 }
 
@@ -143,14 +190,21 @@ div.box {
 
 .card_title {
 	font-size: 18px;
-	color: #3f484d;
+	color: #ecf0f1 !important;
 	font-weight: 600;
 	line-height: 15px;
 }
 
 .card_subtitle {
 	font-size: 17px;
-	color: #c8c8c8;
+	color: #34495e;
+	font-weight: 600;
+	line-height: 20px;
+}
+
+#reviews {
+	font-size: 17px;
+	color: #34495e;
 	font-weight: 600;
 	line-height: 20px;
 }
@@ -187,4 +241,42 @@ div.box {
 
 #new-guide {
 	margin-top: 5px;
+}
+
+.card_left {
+	width: 77px;
+	float: left;
+}
+
+.card_right {
+	width: 273px;
+	float: left;
+}
+
+.box#reviews {
+	color: #2980b9;
+}
+
+.gig_submenu {
+	border: 1px solid #d3d5da;
+	border-radius: 3px;
+	height: 50px;
+	width: 800px;
+	margin-bottom: 50px;
+}
+
+.service_button2 {
+	height: 50px;
+	text-align: center;
+	line-height: 50px;
+	font-size: 16px;
+	font-weight: 600;
+	color: #909090;
+	margin-left: 19px;
+	cursor: pointer;
+	text-decoration: none;
+}
+
+#cta {
+	padding: 15px;
 }
