--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -3,14 +3,14 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-@import url(http://fonts.googleapis.com/css?family=Antic+Slab);
+@import url(https://fonts.googleapis.com/css?family=Antic+Slab);
 
 html,body {
   height:100%;
 }
 
 body {
-  background: #2a88c5  url(http://zmwlt.com/bucket/cz-20150128-what-color-2-bg.jpg) center center / 70%;
+  background: #2a88c5  url(https://zmwlt.com/bucket/cz-20150128-what-color-2-bg.jpg) center center / 70%;
   position: relative;
 }
 
