--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,8 @@
  *= require font-awesome
  */
 
+ @import url('//fonts.googleapis.com/css?family=Antic+Slab');
+
 
 .nav-tabs {
   display: inline-block;
