--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -3,7 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-@import url('//fonts.googleapis.com/css?family=Antic+Slab);
+ @import url('//fonts.googleapis.com/css?family=Antic+Slab');
+
 
 html,body {
   height:100%;
