Fixed up product asset finding, font CSS irregularities

--- a/app/assets/stylesheets/guides.css.scss
+++ b/app/assets/stylesheets/guides.css.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-@import url('//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css);
+@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css');
 
 a {
 color: #ecf0f1;
@@ -74,8 +74,6 @@ color: #f1c40f;
 #guide-notavailable {
 	color: #c0392b
 }
-
-@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
 
 div.box {
 	background-color: #ecf1f1;
