--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
- @import url('//fonts.googleapis.com/css?family=Antic+Slab');
+@import url('//fonts.googleapis.com/css?family=Antic+Slab');
 
 
 html,body {
@@ -11,23 +11,23 @@ html,body {
 }
 
 body {
-  background: #2a88c5  url(https://zmwlt.com/bucket/cz-20150128-what-color-2-bg.jpg) center center / 70%;
+  background: #2a88c5 url("http://zmwlt.com/bucket/cz-20150128-what-color-2-bg.jpg") center center / 70%;
   position: relative;
 }
 
 h1#main-header {
-  font-family: 'Antic Slab', serif;
+  font-family: "Antic Slab", Serif;
   font-size:60px;
   color:#ecf0f1;
 }
 
 h2#main-header {
-  font-family: 'Antic Slab', serif;
+  font-family: "Antic Slab", Serif;
   color:#34495e;
 }
 
 .lead {
-  font-family: 'Antic Slab', serif;
+  font-family: "Antic Slab", Serif;
 	color:#ecf0f1;
 }
 
@@ -68,7 +68,7 @@ p {
 }
 
 h3#home-lead {
-  font-family: 'Antic Slab', serif;
-  color:#e6e6e6;
+  font-family: "Antic Slab", Serif;
+  color: #e6e6e6;
 }
 
