--- a/app/views/guides/_form.html.erb
+++ b/app/views/guides/_form.html.erb
@@ -1,16 +1,16 @@
-<div class="row">
-  <div class="col-md-12" align="middle">
     <%= simple_form_for(@guide, html: {class: "form-signin"}) do |f| %>
 
       <%= f.error_notification %>
 
-        <%= f.input :name, required: true, autofocus: true, label: false, placeholder: "Name your guide", input_html: { class: "form-control" } %>
-        <%= f.input :author, required: true, label: false, placeholder: "Author Name", input_html: {class: "form-control" } %>
-        <%= f.input :description, required: true, label: false, placeholder: "Provide a short description for your growth guide", input_html: { class: "form-control" } %>
-        <%= f.input :price, required: true, label: false, placeholder: "Price your Growth Guide", input_html: { class: "form-control" } %>
+        <%= f.input :name, required: true, autofocus: true, label: false, placeholder: "Hack Name", input_html: { class: "form-control" } %>
+        <%= f.input :author, required: true, label: false, placeholder: "Hack Author", input_html: {class: "form-control" } %>
+        <%= f.input :description, required: true, label: false, placeholder: "Hack Description", input_html: { class: "form-control", rows: 5 } %>
+        <br>
+        <%= f.input :price, required: true, label: false, placeholder: "Price your Growth Hack", input_html: { class: "form-control" } %>
+          <div class="checkbox text-center">
+            <p>Make Hack Available Immediately?</p>
+            <%= f.input :availability, required: true, label: false %>
+          </div>
  
-        <%= f.button :submit, "Create Guide", class: "btn btn-primary btn-block" %>
+        <%= f.button :submit, "Create Growth Hack", class: "btn btn-primary btn-block" %>
     <% end %>
-  </div>
-</div>
-
