--- a/app/assets/stylesheets/guides.css.scss
+++ b/app/assets/stylesheets/guides.css.scss
@@ -4,17 +4,12 @@
 
 @import url('//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css');
 
-a {
-color: #ecf0f1;
-text-decoration: none;
-}
-
 div.box-icon > span {
 	background-color: #ecf1f1;  
 }
 
-#browse-header {
-	color: #ecf1f1;
+div.results.col-md-5 {
+	width: 47.6%;
 }
 
 .menu_spacer {
@@ -25,7 +20,7 @@ div.box-icon > span {
 .menu_cat {
 	margin-top: 25px;
 	font-size: 23px;
-	color: #c8c8c8;
+	color: #2c3e50;
 	font-weight: 600;
 }
 
@@ -35,7 +30,6 @@ div.box-icon > span {
 
 .menu_link, .menu_link2, .menu_link3 {
 font-size: 18px;
-color: #E6E6E6;
 font-weight: 600;
 line-height: 22px;
 text-decoration: none;
@@ -43,7 +37,7 @@ cursor: pointer;
 }
 
 .menu_link:hover, .active, .menu_link2:hover, .menu_link3:hover {
-color: #f1c40f;
+color: #354b60;
 }
 
 .menu_link:hover {
@@ -145,7 +139,7 @@ div.box {
 	width: 350px;
 	float: left;
 	margin-bottom: 72px;
-	margin-left: 85px;
+	margin-left: 40px;
 }
 
 .card_left {
@@ -174,7 +168,7 @@ div.box {
 
 .card_price_subtitle {
 	font-size: 13px;
-	color: #E6E6E6;
+	color: #34495e;
 	font-weight: 700;
 	line-height: 13px;
 	text-align: center;
@@ -182,20 +176,20 @@ div.box {
 }
 
 .card_right {
-	width: 260px;
+	width: 273px;
 	float: left;
 }
 
 .card_title {
 	font-size: 18px;
-	color: #ecf0f1 !important;
+	color: #34495e;
 	font-weight: 600;
 	line-height: 15px;
 }
 
 .card_subtitle {
 	font-size: 17px;
-	color: #34495e;
+	color: #ecf0f1;
 	font-weight: 600;
 	line-height: 20px;
 }
@@ -210,7 +204,7 @@ div.box {
 .card_text {
 	margin-top: 8px;
 	font-size: 17px;
-	color: #E6E6E6;
+	color: #34495e;
 	font-weight: 200;
 	line-height: 22px;
 	width: 280px;
