--- a/app/views/guides/show.html.erb
+++ b/app/views/guides/show.html.erb
@@ -26,7 +26,13 @@
                       <div class="col-md-4"></div>
                       <div class="col-md-4">
                         <% if @guide.availability = true %>
-                          <a id="cta" href="#" class="btn btn-success btn-block">Buy Guide for $<%= @guide.price / 100 %></a>
+                          <a id="cta" href="#" class="btn btn-success btn-block">Get Guide for 
+                            <% if @guide.price > 1 %>
+                              $<%= @guide.price / 100 %>
+                            <% else %>
+                              FREE
+                            <% end %>
+                          </a>
                         <% else %>
                          <a id="cta" class="btn btn-danger btn-block" disabled="disabled">Guide Unavailable</a>
                         <% end %>
