--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -57,6 +57,7 @@
               <li><%= link_to "Browse Guides", guides_path %></li>
               <li><%= link_to "Blog", blog_index_path %></li>
             <% if current_user %> 
+              <li><%= link_to "Dashboard", dashboard_path %></li>
               <li><%= link_to "Settings", edit_user_registration_path %></li>
               <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
             <% else %>
