--- a/app/views/guides/_form.html.erb
+++ b/app/views/guides/_form.html.erb
@@ -9,7 +9,7 @@
         <%= f.input :price, required: true, label: false, placeholder: "Price your Growth Hack", input_html: { class: "form-control" } %>
           <div class="checkbox text-center">
             <p>Make Hack Available Immediately?</p>
-            <%= f.input :availability, required: true, label: false %>
+            <%= f.input :availability, required: false, label: false %>
           </div>
  
         <%= f.button :submit, "Create Growth Hack", class: "btn btn-primary btn-block" %>
