--- a/app/views/guides/_form.html.erb
+++ b/app/views/guides/_form.html.erb
@@ -2,9 +2,11 @@
 
       <%= f.error_notification %>
 
-        <%= f.input :name, required: true, autofocus: true, label: false, placeholder: "Hack Name", input_html: { class: "form-control" } %>
-        <%= f.input :author, required: true, label: false, placeholder: "Hack Author", input_html: {class: "form-control" } %>
-        <%= f.input :description, required: true, label: false, placeholder: "Hack Description", input_html: { class: "form-control", rows: 5 } %>
+        <%= f.input :name, required: true, autofocus: true, label: false, placeholder: "Growth Hack Name", input_html: { class: "form-control" } %>
+        <%= f.input :author, required: true, label: false, placeholder: "Growth Hack Author", input_html: {class: "form-control" } %>
+        <%= f.input :description, required: true, label: false, placeholder: "Growth Hack Short Description", input_html: { class: "form-control", rows: 5 }, :length => 140 %>
+        <br>
+        <%= f.input :longdescription, required: true, label: false, placeholder: "Growth Hack Long Description", input_html: { class: "form-control", rows: 5 } %>
         <br>
         <%= f.input :price, required: true, label: false, placeholder: "Price your Growth Hack", input_html: { class: "form-control" } %>
           <div class="checkbox text-center">
