--- a/app/views/guides/_form.html.erb
+++ b/app/views/guides/_form.html.erb
@@ -9,6 +9,9 @@
         <%= f.input :longdescription, required: true, label: false, placeholder: "Growth Hack Long Description", input_html: { class: "form-control", rows: 5 } %>
         <br>
         <%= f.input :price, required: true, label: false, placeholder: "Price your Growth Hack", input_html: { class: "form-control" } %>
+        <%= f.input :image %>
+        <%= f.input :resource %>
+
           <div class="checkbox text-center">
             <p>Make Hack Available Immediately?</p>
             <%= f.input :availability, required: false, label: false %>
